--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,13 @@
 ---
 abstract: 'Framework for Catalyst-based CMS Web Applications'
 author:
-  - 'Marcel Gruenauer <marcel@cpan.org>'
+  - 'The following person is the author of all the files provided in'
 build_requires:
   Test::More: 0.94
 configure_requires:
-  ExtUtils::MakeMaker: 6.58
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.130880'
+  Module::Build::Tiny: 0.025
+dynamic_config: 0
+generated_by: 'Dist::Milla version v1.0.3, Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.131560'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,7 +16,11 @@ name: CatalystX-Crudite
 no_index:
   directory:
     - t
+    - xt
     - inc
+    - share
+    - eg
+    - examples
 requires:
   Authen::Passphrase::BlowfishCrypt: 0
   Catalyst::Action::RenderView: 0
@@ -31,7 +35,7 @@ requires:
   Catalyst::Plugin::Static::Simple: 0
   Catalyst::Runtime: 0
   Catalyst::View::TT: 0
-  CatalystX::Resource: 0.006001
+  CatalystX::Resource: 0.008001
   CatalystX::SimpleLogin: 0
   Config::General: 0
   DBIx::Class: 0
@@ -57,5 +61,7 @@ requires:
 resources:
   bugtracker: https://github.com/marcelgruenauer/CatalystX-Crudite/issues
   homepage: https://github.com/marcelgruenauer/CatalystX-Crudite
-  repository: git://github.com/marcelgruenauer/CatalystX-Crudite.git
-version: 0.16
+  repository: https://github.com/marcelgruenauer/CatalystX-Crudite.git
+version: 0.18
+x_contributors:
+  - 'Marcel Gruenauer <hanekomu@gmail.com>'
